--- a/stack.yaml
+++ b/stack.yaml
@@ -6,23 +6,16 @@ resolver: lts-4.2
 # Local packages, usually specified by relative directory name
 packages:
 - '.'
-- location:
-    git: https://github.com/Teaspot-Studio/gore-and-ash.git
-    commit: 8405b253e2cfc17e6eff39a251387384f33fbd4a
-- location:
-    git: https://github.com/Teaspot-Studio/gore-and-ash-logging.git
-    commit: 818d78ec8a803dcc1ccb478b8af9974e49f02a51
+- './henet'
 - location:
     git: https://github.com/Teaspot-Studio/bitset.git
     commit: 5bb58562ff99c551fa9643321c95a6ba27977596
-- location:
-    git: https://github.com/Teaspot-Studio/netwire.git
-    commit: c9f8034c4f24c4491db88782142e0fcdf8bba540
 
 # Packages to be pulled from upstream that are not in the resolver (e.g., acme-missiles-0.3)
 extra-deps:
-- henet-1.3.9.3
 - typesafe-endian-0.1.0.1
+- gore-and-ash-logging-1.1.0.0
+- gore-and-ash-1.1.0.1
 
 # Override default flag values for local packages and extra-deps
 flags: {}
