--- a/gore-and-ash-network.cabal
+++ b/gore-and-ash-network.cabal
@@ -1,5 +1,5 @@
 name:                gore-and-ash-network
-version:             1.3.2.0
+version:             1.4.0.0
 synopsis:            Core module for Gore&Ash engine with low level network API
 description:         Please see README.md
 homepage:            https://github.com/Teaspot-Studio/gore-and-ash-network
@@ -17,7 +17,11 @@ category:            Game
 build-type:          Simple
 cabal-version:       >=1.10
 
-extra-source-files: enet/include/enet/*.h
+extra-source-files: 
+  enet/include/enet/*.h
+  README.md
+  CHANGELOG.md
+  stack.yaml
 
 Bug-reports:          https://github.com/Teaspot-Studio/gore-and-ash-network/issues
 Source-repository head
@@ -65,7 +69,7 @@ library
                      , extra >= 1.4.2
                      , ghc-prim
                      , gore-and-ash >= 1.1.0.0
-                     , gore-and-ash-logging >= 1.1.0.0
+                     , gore-and-ash-logging >= 2.0.0.0
                      , hashable >= 1.2.3.3
                      , integer-gmp >= 1.0.0.0
                      , mtl >= 2.2.1
