--- a/stack.yaml
+++ b/stack.yaml
@@ -1,17 +1,20 @@
 # For more information, see: https://github.com/commercialhaskell/stack/blob/release/doc/yaml_configuration.md
 
 # Specifies the GHC version and set of packages available (e.g., lts-3.5, nightly-2015-09-21, ghc-7.10.2)
-resolver: lts-5.6
+resolver: lts-7.9
 
 # Local packages, usually specified by relative directory name
 packages:
 - '.'
+- location:
+    git: https://github.com/Teaspot-Studio/gore-and-ash-logging
+    commit: d535d99c83c2c8999afe6aadc015a572ebb023db
 
 # Packages to be pulled from upstream that are not in the resolver (e.g., acme-missiles-0.3)
 extra-deps:
 - typesafe-endian-0.1.0.1
-- gore-and-ash-logging-1.1.0.0
-- gore-and-ash-1.1.0.1
+- gore-and-ash-logging-2.0.1.0
+- gore-and-ash-1.2.2.0
 
 # Override default flag values for local packages and extra-deps
 flags: {}
