--- a/gore-and-ash-network.cabal
+++ b/gore-and-ash-network.cabal
@@ -1,5 +1,5 @@
 name:                gore-and-ash-network
-version:             1.4.0.0
+version:             2.0.0.0
 synopsis:            Core module for Gore&Ash engine with low level network API
 description:         Please see README.md
 homepage:            https://github.com/Teaspot-Studio/gore-and-ash-network
@@ -17,85 +17,86 @@ category:            Game
 build-type:          Simple
 cabal-version:       >=1.10
 
-extra-source-files: 
+extra-source-files:
   enet/include/enet/*.h
   README.md
   CHANGELOG.md
   stack.yaml
 
-Bug-reports:          https://github.com/Teaspot-Studio/gore-and-ash-network/issues
-Source-repository head
+bug-reports:          https://github.com/Teaspot-Studio/gore-and-ash-network/issues
+
+source-repository head
   type:               git
   location:           git@github.com:Teaspot-Studio/gore-and-ash-network.git
 
 library
   hs-source-dirs:     src, henet
-  exposed-modules:    Game.GoreAndAsh.Network
-                      Game.GoreAndAsh.Network.API
-                      Game.GoreAndAsh.Network.Message
-                      Game.GoreAndAsh.Network.Module
-                      Game.GoreAndAsh.Network.State
+  exposed-modules:
+    Game.GoreAndAsh.Network
+    Game.GoreAndAsh.Network.API
+    Game.GoreAndAsh.Network.Message
+    Game.GoreAndAsh.Network.Module
+    Game.GoreAndAsh.Network.State
   other-modules:
-                      Network.ENet
-                      Network.ENet.Bindings
-                      Network.ENet.Bindings.Callbacks
-                      Network.ENet.Bindings.List
-                      Network.ENet.Bindings.System
-                      Network.ENet.Host
-                      Network.ENet.Internal
-                      Network.ENet.Packet
-                      Network.ENet.Peer
-  c-sources:          
-                      enet/callbacks.c
-                      enet/compress.c
-                      enet/host.c
-                      enet/list.c
-                      enet/packet.c
-                      enet/peer.c
-                      enet/protocol.c
+    Network.ENet
+    Network.ENet.Bindings
+    Network.ENet.Bindings.Callbacks
+    Network.ENet.Bindings.List
+    Network.ENet.Bindings.System
+    Network.ENet.Host
+    Network.ENet.Internal
+    Network.ENet.Packet
+    Network.ENet.Peer
+  c-sources:
+    enet/callbacks.c
+    enet/compress.c
+    enet/host.c
+    enet/list.c
+    enet/packet.c
+    enet/peer.c
+    enet/protocol.c
 
-  include-dirs:       enet
-                      enet/include
-
+  include-dirs:
+    enet
+    enet/include
 
   build-tools:        hsc2hs
 
   default-language:    Haskell2010
-  build-depends:       base >= 4.7 && < 5
-                     , bytestring >= 0.10.6.0
-                     , containers >= 0.5.6.2
-                     , deepseq >= 1.4.1.1
-                     , exceptions >= 0.8.0.2
-                     , extra >= 1.4.2
-                     , ghc-prim
-                     , gore-and-ash >= 1.1.0.0
-                     , gore-and-ash-logging >= 2.0.0.0
-                     , hashable >= 1.2.3.3
-                     , integer-gmp >= 1.0.0.0
-                     , mtl >= 2.2.1
-                     , network >= 2.6.2.1
-                     , resourcet >= 1.1.7.1
-                     , text >= 1.2.1.3
-                     , text-show >= 2
-                     , transformers >= 0.4.2
-                     , transformers-base >= 0.4.4
-                     , typesafe-endian >= 0.1
-                     , unordered-containers >= 0.2.5.1
+  build-depends:
+      base                  >= 4.7      && < 5
+    , bytestring            >= 0.10.6.0 && < 0.11
+    , containers            >= 0.5.6.2  && < 0.6
+    , deepseq               >= 1.4.1.1  && < 1.5
+    , exceptions            >= 0.8.0.2  && < 0.9
+    , extra                 >= 1.4.2    && < 1.5
+    , gore-and-ash          >= 2.0.0.0  && < 2.1
+    , gore-and-ash-logging  >= 3.0.0.0  && < 3.1
+    , hashable              >= 1.2.3.3  && < 1.3
+    , mtl                   >= 2.2.1    && < 2.3
+    , network               >= 2.6.2.1  && < 2.7
+    , resourcet             >= 1.1.7.1  && < 1.2
+    , text                  >= 1.2.1.3  && < 1.3
+    , text-show             >= 2        && < 4
+    , transformers          >= 0.4.2    && < 0.6
+    , transformers-base     >= 0.4.4    && < 0.6
+    , typesafe-endian       >= 0.1      && < 0.3
+    , unordered-containers  >= 0.2.5.1  && < 0.3
 
-  default-extensions:  
-                       Arrows
-                       BangPatterns
-                       DeriveGeneric
-                       FlexibleInstances
-                       GeneralizedNewtypeDeriving
-                       MultiParamTypeClasses
-                       OverloadedStrings
-                       RecordWildCards
-                       ScopedTypeVariables
-                       TupleSections
-                       TypeFamilies
-                       TypeSynonymInstances
-                       UndecidableInstances
+  default-extensions:
+    BangPatterns
+    DeriveGeneric
+    FlexibleContexts
+    FlexibleInstances
+    GeneralizedNewtypeDeriving
+    MultiParamTypeClasses
+    OverloadedStrings
+    RecordWildCards
+    ScopedTypeVariables
+    TupleSections
+    TypeFamilies
+    TypeSynonymInstances
+    UndecidableInstances
 
   cc-options:         -g
   ld-options:         -g
