--- a/gore-and-ash-network.cabal
+++ b/gore-and-ash-network.cabal
@@ -80,6 +80,7 @@ library
     , resourcet             >= 1.1.7.1  && < 1.2
     , text                  >= 1.2.1.3  && < 1.3
     , text-show             >= 2        && < 4
+    , these                 >= 0.7      && < 0.8
     , transformers          >= 0.4.2    && < 0.6
     , transformers-base     >= 0.4.4    && < 0.6
     , typesafe-endian       >= 0.1      && < 0.3
@@ -90,6 +91,7 @@ library
     DeriveGeneric
     FlexibleContexts
     FlexibleInstances
+    FunctionalDependencies
     GeneralizedNewtypeDeriving
     MultiParamTypeClasses
     OverloadedStrings
