--- a/gore-and-ash-network.cabal
+++ b/gore-and-ash-network.cabal
@@ -25,6 +25,10 @@ extra-source-files:
 
 bug-reports:          https://github.com/Teaspot-Studio/gore-and-ash-network/issues
 
+flag examples
+  description: Enable building of examples
+  default:     False
+
 source-repository head
   type:               git
   location:           git@github.com:Teaspot-Studio/gore-and-ash-network.git
@@ -75,6 +79,7 @@ library
     , gore-and-ash          >= 2.0.0.0  && < 2.1
     , gore-and-ash-logging  >= 3.0.0.0  && < 3.1
     , hashable              >= 1.2.3.3  && < 1.3
+    , monad-control         >= 1.0      && < 1.1
     , mtl                   >= 2.2.1    && < 2.3
     , network               >= 2.6.2.1  && < 2.7
     , resourcet             >= 1.1.7.1  && < 1.2
@@ -111,3 +116,39 @@ library
   else
     cc-options:         -D_GNU_SOURCE -Wno-deprecated-declarations -DHAS_SOCKLEN_T=1
     c-sources:          enet/unix.c
+
+executable gore-and-ash-network-example01
+  if flag(examples)
+    buildable: True
+  else
+    buildable: False
+
+  hs-source-dirs:     examples
+  main-is:            Example01.hs
+  default-language:   Haskell2010
+  build-depends:
+      base                  >= 4.7      && < 5
+    , exceptions            >= 0.8      && < 0.9
+    , gore-and-ash          >= 2.0      && < 2.1
+    , gore-and-ash-logging  >= 3.0      && < 3.1
+    , gore-and-ash-network
+    , mtl                   >= 2.2      && < 2.3
+    , network               >= 2.6      && < 2.7
+
+  default-extensions:
+    BangPatterns
+    DeriveFunctor
+    DeriveGeneric
+    FlexibleContexts
+    FlexibleInstances
+    FunctionalDependencies
+    GeneralizedNewtypeDeriving
+    MultiParamTypeClasses
+    OverloadedStrings
+    RecordWildCards
+    ScopedTypeVariables
+    StandaloneDeriving
+    TypeFamilies
+    UndecidableInstances
+
+  ghc-options: -threaded
