--- a/gore-and-ash-network.cabal
+++ b/gore-and-ash-network.cabal
@@ -83,6 +83,7 @@ library
     , mtl                   >= 2.2.1    && < 2.3
     , network               >= 2.6.2.1  && < 2.7
     , resourcet             >= 1.1.7.1  && < 1.2
+    , semiring-simple       >= 1.0      && < 1.1
     , text                  >= 1.2.1.3  && < 1.3
     , text-show             >= 2        && < 4
     , these                 >= 0.7      && < 0.8
