--- a/gore-and-ash-network.cabal
+++ b/gore-and-ash-network.cabal
@@ -102,6 +102,7 @@ library
     MultiParamTypeClasses
     OverloadedStrings
     RecordWildCards
+    RecursiveDo
     ScopedTypeVariables
     TupleSections
     TypeFamilies
