--- a/gore-and-ash-network.cabal
+++ b/gore-and-ash-network.cabal
@@ -4,21 +4,15 @@ synopsis:            Core module for Gore&Ash engine with low level network API
 description:         Please see README.md
 homepage:            https://github.com/Teaspot-Studio/gore-and-ash-network
 license:             BSD3
-license-files:       LICENSE LICENSE_henet
+license-files:       LICENSE
 author:              Anton Gushcha
-                     John Ericson
-                     Lee Salzman
 maintainer:          ncrashed@gmail.com
-copyright:           2015-2016 Anton Gushcha,
-                     2013-2015 John Ericson,
-                     2002-2013 Lee Salzman
-
+copyright:           2015-2017 Anton Gushcha
 category:            Game
 build-type:          Simple
 cabal-version:       >=1.10
 
 extra-source-files:
-  enet/include/enet/*.h
   README.md
   CHANGELOG.md
   stack.yaml
@@ -34,43 +28,22 @@ source-repository head
   location:           git@github.com:Teaspot-Studio/gore-and-ash-network.git
 
 library
-  hs-source-dirs:     src, henet
+  hs-source-dirs:     src
   exposed-modules:
     Game.GoreAndAsh.Network
     Game.GoreAndAsh.Network.API
+    Game.GoreAndAsh.Network.Backend
+    Game.GoreAndAsh.Network.Backend.TCP
     Game.GoreAndAsh.Network.Error
     Game.GoreAndAsh.Network.Message
     Game.GoreAndAsh.Network.Module
     Game.GoreAndAsh.Network.Options
     Game.GoreAndAsh.Network.State
-  other-modules:
-    Network.ENet
-    Network.ENet.Bindings
-    Network.ENet.Bindings.Callbacks
-    Network.ENet.Bindings.List
-    Network.ENet.Bindings.System
-    Network.ENet.Host
-    Network.ENet.Internal
-    Network.ENet.Packet
-    Network.ENet.Peer
-  c-sources:
-    enet/callbacks.c
-    enet/compress.c
-    enet/host.c
-    enet/list.c
-    enet/packet.c
-    enet/peer.c
-    enet/protocol.c
-
-  include-dirs:
-    enet
-    enet/include
-
-  build-tools:        hsc2hs
 
   default-language:    Haskell2010
   build-depends:
       base                  >= 4.7      && < 5
+    , binary                >= 0.8      && < 0.9
     , bytestring            >= 0.10.6.0 && < 0.11
     , containers            >= 0.5.6.2  && < 0.6
     , deepseq               >= 1.4.1.1  && < 1.5
@@ -78,19 +51,18 @@ library
     , extra                 >= 1.4.2    && < 1.5
     , gore-and-ash          >= 2.0.0.0  && < 2.1
     , gore-and-ash-logging  >= 3.0.0.0  && < 3.1
-    , hashable              >= 1.2.3.3  && < 1.3
+    , immortal              >= 0.2      && < 0.3
     , monad-control         >= 1.0      && < 1.1
     , mtl                   >= 2.2.1    && < 2.3
     , network               >= 2.6.2.1  && < 2.7
+    , network-transport     >= 0.4      && < 0.5
+    , network-transport-tcp >= 0.5      && < 0.6
     , resourcet             >= 1.1.7.1  && < 1.2
-    , semiring-simple       >= 1.0      && < 1.1
     , stm                   >= 2.4      && < 2.5
     , text                  >= 1.2.1.3  && < 1.3
-    , text-show             >= 2        && < 4
     , these                 >= 0.7      && < 0.8
     , transformers          >= 0.4.2    && < 0.6
     , transformers-base     >= 0.4.4    && < 0.6
-    , typesafe-endian       >= 0.1      && < 0.3
     , unordered-containers  >= 0.2.5.1  && < 0.3
 
   default-extensions:
@@ -110,15 +82,6 @@ library
     TypeSynonymInstances
     UndecidableInstances
 
-  cc-options:         -g
-  ld-options:         -g
-  if os(windows)
-    cpp-options:        -DWINDOWS
-    cc-options:         -D_WIN32 -D_DEBUG
-    c-sources:          enet/win32.c
-  else
-    cc-options:         -D_GNU_SOURCE -Wno-deprecated-declarations -DHAS_SOCKLEN_T=1
-    c-sources:          enet/unix.c
 
 executable gore-and-ash-network-example01
   if flag(examples)
