--- a/stack.yaml
+++ b/stack.yaml
@@ -20,6 +20,8 @@ extra-deps:
 - prim-uniq-0.1.0.1
 - ref-tf-0.4.0.1
 - typesafe-endian-0.1.0.1
+- socket-0.7.0.0
+- socket-sctp-0.3.0.0
 
 # Override default flag values for local packages and extra-deps
 flags: {}
