--- a/stack.yaml
+++ b/stack.yaml
@@ -1,17 +1,23 @@
 # For more information, see: https://github.com/commercialhaskell/stack/blob/release/doc/yaml_configuration.md
 
 # Specifies the GHC version and set of packages available (e.g., lts-3.5, nightly-2015-09-21, ghc-7.10.2)
-resolver: lts-7.14
+resolver: lts-7.15
 
 # Local packages, usually specified by relative directory name
 packages:
 - '.'
 - location:
-    git: git@github.com:reflex-frp/reflex.git
+    git: https://github.com/reflex-frp/reflex.git
     commit: 91299fce0bb2caddfba35af6608df57dd31e3690
 - location:
-    git: git@github.com:bennofs/reflex-host.git
+    git: https://github.com/bennofs/reflex-host.git
     commit: ef269102ef5c61f15072ed79370e791820e25d8d
+- location:
+    git: https://github.com/teaspot-studio/gore-and-ash.git
+    commit: 5b0668c62f097f665bdcc2963b5cc6b1d165fb9b
+- location:
+    git: https://github.com/teaspot-studio/gore-and-ash-logging.git
+    commit: 77471b5c6413fb242f657c49efcbd1ef29204c26
 
 # Packages to be pulled from upstream that are not in the resolver (e.g., acme-missiles-0.3)
 extra-deps:
@@ -21,7 +27,6 @@ extra-deps:
 - ref-tf-0.4.0.1
 - typesafe-endian-0.1.0.1
 - socket-0.7.0.0
-- socket-sctp-0.3.0.0
 
 # Override default flag values for local packages and extra-deps
 flags: {}
